# atari-creative-playground

./: .envrc  .gitignore  CMakeLists.txt  README.md  TODO.md  soft_trigo_generator.ipynb
research/: double_buffering_1.c
src/: linea.c  main.c  matrix.c  trigo.c  utils.c  video.c
src/includes/: config.h  const.h  linea.h  matrix.h  trigo.h  utils.h  video.h
src/scenes/: color.c  cube.c  la_dbg.c  vdi_dbg.c
tests/: CMakeLists.txt  test_matrix.c
tools/: run.sh
